# Lumi

./: .gitignore  CONTRIBUTING.md  CharacterDesign.md  FEATURES.md  README.md  index.html  package-lock.json  package.json  settings.html  tsconfig.app.tsbuildinfo  tsconfig.tests.json  vite.config.ts
Issues/: 001-live2d-not-rendering.md  002-debug-overlay-disappears.md  003-tauri-webview2-webgl-compat.md
_CHARACTER/: 琥珀.md  琥珀_design.md  路飞.md  路飞_design.md
agents/: AI_RULES.md  PROMPT_CONTEXT.md
docs/: ADR.md  AI-Native Open Source Project Documentation Bootstrap.md  API.md  ARCHITECTURE.md  CHARACTER_MODEL_MAPPING.md  CONTRIBUTING.md  FEATURES.md  PRD.md  README.md  TASKS.md  TECH_SPEC.md  sprite-action-system.md  sprite-architecture.md
public/models/: manifest.json
scripts/: build-sprite-sheet.mjs  download-model.ps1  download-model.sh
src/: App.tsx  settingsMain.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  memory.rs  mod.rs  system.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: mod.rs  screenshot.rs  secret_store.rs
src/components/: ChatPanel.tsx  ContextMenu.tsx  DesktopPet.tsx  Live2DPet.tsx  SettingsPage.tsx  SettingsPanel.tsx  SpritePet.tsx
src/hooks/: renderRecovery.ts  useDragPhysics.ts  useModelCatalog.ts  usePetState.ts  useRenderRecovery.ts
src/live2d/: ActionScheduler.ts  SpriteAnimator.ts  actions.ts  live2dTypes.ts  (+4 more)
tests/: SpriteAnimator.test.ts  logger.test.ts  renderRecovery.test.ts
(+12 files in other folders)
